Fixed Background Not Supported on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
-body, html{
+body, html {
 	font-size: 14px;
 	color: #333;
 	background-color: #fff;
 	letter-spacing: 1px;
 	height: 100%;
+	width: 100%;
 }
 .bg {
     background-image: url(../img/s0.jpg);
@@ -11,8 +12,8 @@ body, html{
     background-position: 80% 100%;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: scroll;
 }
-
 .overlay {
 	width: 100%;
 	height: 100%;
